# orrery

./: .env.example  .gitignore  NOTES.md  README.md  index.html
.claude/: launch.json
.github/workflows/: fetch.yml
data/: apod_qr.json  bg_weekly.json  briefing.txt  daily.json  earth_texture.json  frame.json  frame_b64.json  galaxy_sprite.json  moon_texture.json  version.json  world_clouds.json  world_mask.json
data/bg_archive/: bg_2026-04-06_11-59-13_moebius.json  (+50 more)
display/: index.html
docs/: architecture.md  art.md  bom.md  firmware.md  generate_diagrams.py  generate_schematics.py  hardware.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  als.c  als.h  apod.c  apod.h  app_main.cpp  audio.c  audio.h  clock.c  clock.h  daily.c  daily.h  encoder.c  encoder.h  font.c  font.h  gfx.c  gfx.h  idf_component.yml  mp3_impl.c  ota.c  ota.h  panel.cpp  panel.h  pins.h  scenes.c  scenes.h  wifi.c  wifi.h  wifi_creds.h.example  world.c  world.h
hardware/: .gitignore
images/: .gitignore
mechanical/: .gitignore  RS-25.stp  assembly.FCMacro  back_panel.FCMacro  hub75_panel.FCMacro  hub75_panel.dxf  orrery_v1_pcb.step  pcb.FCMacro  psu.FCMacro  regenerate_pcb_step.sh  rotary_encoder.FCMacro  speaker.FCMacro
scripts/: build_earth_texture.py  build_moon_texture.py  build_world_mask.py  video_to_sprites.py
server/: app.py  briefing.py  cache.py  db.py  fetch_clouds.py  generate.py  generate_bg.py  image.py  nasa.py  qr.py  requirements.txt  uv.py  weather.py
videos/: .gitignore
(+1191 files in other folders)
